- added support for charset encoding in aggregator.lua
- added support for content tag in aggregator.lua
- added suport for host=hostname:post to popforward.lua
- added the pipe and pipe_limit options to popforward.lua
- added the io.dpopen lua primitive unter unix
- some pretty stuff for make
- added -x, --toxml to export plugin description to XML
- fixed building tgz-dist from the sources (not from CVS)
- fixed owa.lua double stat() (thanks hetfield)
- added owa.lua for httpmail based webmails
- added some methods to browser to easily implement DAV
- added httpmail-DAV implementation
- fixed gmail.lua \r\n issue
- added luaexpat bindings
- added aol.lua (thanks to russell)
- adedd the arrow winsystray stuff (thanks russells)
- added option -k to kill the running freepopsd
- fixed URL decoding for plugin parameters and added support for space
represented as + character
- added standard folders support for yahoo.it
- added yahoo.it support to yahoo.lua
- added linuxgazette.net aggregator domains
08/08/2004 0.0.14 fix release
- fixed gmail login procedure
- fixed some stuff in cookie.lua
- added yahoo.lua (thanks russell)
- fixed bug in libero.lua (local b = internal_state.b missing before
b:verbose_mode(), submitted by Negrore)
- lycos parsing message workaround (should be fixed)
- bug in lycos TOP fixed
- libero.lua adopted to use common.lua top and retr_cb
- tin.lua adopted to use common.lua top and retr_cb
- common.lua now includes a common TOP implementarion and the classical
retr_cb and top_cb factories.
- finished FreeBSD porting
26/07/2004 0.0.13 fix release
- fixed manual (thanks er_capoccia)
- fixed rpm /etc/init.d script (thanks domfe)
- the win32 install no more overwrites the start menu entry (preserves the user options)
- added to browser the NTLM and other auth type if SSL is found
- added folder support to libero.lua
- fixed libero.lua TOP function
- added scripts/cvs2changelog.lua to generate changelog for the contibuted
plugins